--- a/index.html
+++ b/index.html
@@ -164,6 +164,28 @@
         </section>
         <script src="js/collapse.js"></script>
         
+        <section>
+            <br>
+            <h4>To-Do List</h4>
+            <form id="task-form">
+                <input type="text" id="new-task" placeholder="You can add new task" required>
+                <button type="button" onclick="addTask()">Add</button>
+            </form>
+            <br>
+            <ul id="task-list">
+                <li>
+                    <span>Read about History of FC Barcelona.</span>
+                </li>
+                <li>
+                    <span>Visit the social media.</span>
+                </li>
+                <li>
+                    <span>Buy jersey.</span>
+                </li>
+            </ul>
+            <br>
+        </section>
+        <script src="js/todolist.js"></script>
 
 
     </main>
