--- a/History.html
+++ b/History.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/musicPlayer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -55,18 +59,32 @@
                 Lionel Messi Era: Lionel Messi, considered one of the greatest footballers of all time, emerged from Barça's youth academy, La Masia. He led the club to unprecedented success, winning multiple Ballon d'Or awards and becoming the club's all-time top scorer.
                 Recent Challenges: Despite their success, FC Barcelona faced financial difficulties in the late 2010s, leading to the departure of Messi in 2021 due to salary cap constraints. The club is undergoing a period of transition.
             </p>
-            <div class="music-player">
-                <h3>Barca's anthem</h3>
-                <audio id="audio" controls>
-                    <source src="music/anthem.wav" type="audio/wav"> 
-                    Your browser does not support the audio element.
-                </audio>
-                <div class="controls">
-                    <button id="playButton">Play</button>
-                    <button id="pauseButton">Pause</button>
-                    <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1">
+            <div class="music-container" id="music-container">
+                <div class="music-info">
+                  <h4 id="title"></h4>
+                  <div class="progress-container" id="progress-container">
+                    <div class="progress" id="progress"></div>
+                  </div>
                 </div>
-            </div>
+          
+                <audio src="music/anthem.mp3" id="audio"></audio>
+                <audio src="music/anthem.wav" id="audio"></audio>
+          
+                <div class="img-container">
+                  <img src="img/barca.png" alt="music-cover" id="cover" />
+                </div>
+                <div class="navigation">
+                  <button id="prev" class="action-btn">
+                    <i class="fas fa-backward"></i>
+                  </button>
+                  <button id="play" class="action-btn action-btn-big">
+                    <i class="fas fa-play"></i>
+                  </button>
+                  <button id="next" class="action-btn">
+                    <i class="fas fa-forward"></i>
+                  </button>
+                </div>
+              </div>
             <script src="js/musciPlayer.js"></script>
         </section>
         <br>
