--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="barca.png">
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+
     <title>FC Barcelona</title>
 </head>
 <body>
@@ -191,13 +191,13 @@
     </main>
     <footer class="main-footer"></footer>
         <hr>
-        <section id = "contact">
+        <section id="contact">
             <h1>Contact Us</h1>
-            <form method="post">
+            <form method="post" id="contactForm">
                 <div class="form-group">
                     <label for="email">Email:</label>
-                    <input type="email" aria-describedby="emailHelp" id="email" name="email" placeholder="Enter email" required>
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    <input type="email" id="email" name="email" placeholder="Enter email" required>
+                    <small>We'll never share your email with anyone else.</small>
                     <br>
                     <p>Gender:</p>
                     <input type="radio" id="male" name="gender" value="male" required>
@@ -205,7 +205,7 @@
                     <input type="radio" id="female" name="gender" value="female" required>
                     <label for="female">Female</label>
                     <br>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea id="exampleFormControlTextarea1" name="message" rows="3" required></textarea>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </form>
