--- a/History.html
+++ b/History.html
@@ -120,6 +120,17 @@
                 </table>
             </div>
         </section>
+        <section id="tournements">
+            <div class="list-group">
+                <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+                  The tournements where FC Barcelona play.
+                </a>
+                <a href="https://www.google.com/search?q=la+liga&rlz=1C1GCEU_ruKZ1067KZ1067&oq=la+liga&gs_lcrp=EgZjaHJvbWUqBwgAEAAYjwIyBwgAEAAYjwIyDwgBEC4YQxiDARixAxiKBTIJCAIQABhDGIoFMgkIAxAuGEMYigUyCQgEEAAYQxiKBTIHCAUQABiABDIHCAYQABiABDIGCAcQRRg80gEINTg4M2oxajeoAgCwAgA&sourceid=chrome&ie=UTF-8#sie=lg;/g/11khrmf0s3;2;/m/09gqx;st;fp;1;;;" class="list-group-item list-group-item-action">La Liga (Spanish League)</a>
+                <a href="https://www.google.com/search?gs_ssp=eJzj4tDP1TfIrijLM2D04knOL0hUSEnNUShKrQQAXSkHxA&q=copa+del+rey&rlz=1C1GCEU_ruKZ1067KZ1067&oq=copa+del&gs_lcrp=EgZjaHJvbWUqDQgBEC4YgwEYsQMYgAQyEAgAEAAYgwEY4wIYsQMYgAQyDQgBEC4YgwEYsQMYgAQyBggCEEUYOTIHCAMQABiABDIHCAQQABiABDIHCAUQABiABDIHCAYQABiABDIKCAcQLhjUAhiABDIHCAgQABiABDIHCAkQLhiABNIBCDI2OTJqMGo5qAIAsAIA&sourceid=chrome&ie=UTF-8#sie=lg;/g/11ss55chlw;2;/m/0kxvn;lb;fp;1;;;" class="list-group-item list-group-item-action">Copa del rey (Spanish Cup)</a>
+                <a href="https://ru.wikipedia.org/wiki/%D0%A1%D1%83%D0%BF%D0%B5%D1%80%D0%BA%D1%83%D0%B1%D0%BE%D0%BA_%D0%98%D1%81%D0%BF%D0%B0%D0%BD%D0%B8%D0%B8_%D0%BF%D0%BE_%D1%84%D1%83%D1%82%D0%B1%D0%BE%D0%BB%D1%83_2023/2024" class="list-group-item list-group-item-action">Super copa (Spanish super cup)</a>
+                <a href="https://www.google.com/search?sca_esv=579655989&rlz=1C1GCEU_ruKZ1067KZ1067&sxsrf=AM9HkKlzH_I5y8E5ook1faRgPzQa92jP7g:1699216121757&q=%D1%84%D0%BA+%D0%B1%D0%B0%D1%80%D1%81%D0%B5%D0%BB%D0%BE%D0%BD%D0%B0&stick=H4sIAAAAAAAAAONgFuLQz9U3yK4oy1MCszLK0ku0tDzy08szc1KCC_KLSoodi4vzkzMTSzLz84pDUhNzi0PyIRIgziJW8YstF3YpXNh4YcPFhouNF7Ze2H1h34W9FzbsYGUEAGFTP2tfAAAA&sa=X&ved=2ahUKEwiKz9Wq2a2CAxXqEhAIHRWfCksQxA16BAhKEAU&biw=1536&bih=731&dpr=1.25#sie=t;/m/0hvgt;2;/m/09gqx;st;fp;1;;;" class="list-group-item list-group-item-action">Champions League</a>
+              </div>
+        </section>
     </main>
     <footer class="main-footer" >
         <hr>
