--- a/Shop.html
+++ b/Shop.html
@@ -51,98 +51,11 @@
         <script src="js/countdown.js"></script>
         <br>
         <div class="container">
-            <div class="row">
-
-                <div class="col-md-3">
-                    <div class="card product-card">
-                        <img src="img/jersey1.webp" class="card-img-top product-image" alt="jersey 1">
-                        <div class="card-body">
-                            <h5 class="card-title product-title">Barcelona's jersey season 23/24</h5>
-                            <p class="card-text product-price"><strike>$9.99 </strike>/$6.99</p>
-                            <a href="#" class="btn btn-primary buy-button">Buy</a>
-                        </div>
-                    </div>
-                </div>
-    
-                <div class="col-md-3">
-                    <div class="card product-card">
-                        <img src="img/jersey2.webp" class="card-img-top product-image" alt="jersey 2">
-                        <div class="card-body">
-                            <h5 class="card-title product-title">Barcelona's guest jersey season 23/24</h5>
-                            <p class="card-text product-price"><strike>$9.99 </strike>/$6.99</p>
-                            <a href="#" class="btn btn-primary buy-button">Buy</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="card product-card">
-                        <img src="img/jersey3.webp" class="card-img-top product-image" alt="jersey 3">
-                        <div class="card-body">
-                            <h5 class="card-title product-title">Barcelona's third jersey season 23/24</h5>
-                            <p class="card-text product-price"><strike>$9.99 </strike>/$6.99</p>
-                            <a href="#" class="btn btn-primary buy-button">Buy</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="card product-card">
-                        <img src="img/model.webp" class="card-img-top product-image" alt="model">
-                        <div class="card-body">
-                            <h5 class="card-title product-title">Old school Barca's T-shirt</h5>
-                            <p class="card-text product-price"><strike>$14.99 </strike>/$10.49</p>
-                            <a href="#" class="btn btn-primary buy-button">Buy</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="card product-card">
-                        <img src="img/kid.webp" class="card-img-top product-image" alt="Kid">
-                        <div class="card-body">
-                            <h5 class="card-title product-title">Barcelona's jersey season 23/24 (for kids)</h5>
-                            <p class="card-text product-price"><strike>$4.99 </strike>/$3.49</p>
-                            <a href="#" class="btn btn-primary buy-button">Buy</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="card product-card">
-                        <img src="img/trava.webp" class="card-img-top product-image" alt="Mini camp nou">
-                        <div class="card-body">
-                            <h5 class="card-title product-title">Mini Camp Nou with grass from stadium</h5>
-                            <p class="card-text product-price"><strike>$24.99 </strike>/$17.49</p>
-                            <a href="#" class="btn btn-primary buy-button">Buy</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="card product-card">
-                        <img src="img/33.webp" class="card-img-top product-image" alt="Raphinha in green">
-                        <div class="card-body">
-                            <h5 class="card-title product-title">Raphinha look</h5>
-                            <p class="card-text product-price"><strike>$19.99 </strike>/$13.99</p>
-                            <a href="#" class="btn btn-primary buy-button">Buy</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="card product-card">
-                        <img src="img/training.webp" class="card-img-top product-image" alt="training wearing">
-                        <div class="card-body">
-                            <h5 class="card-title product-title">Training kit</h5>
-                            <p class="card-text product-price"><strike>$19.99 </strike>/$13.99</p>
-                            <a href="#" class="btn btn-primary buy-button">Buy</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="row" id="product-list">
 
             </div>
         </div>
+        <script src="js/cards.js"></script>
     </main>
     <footer class="main-footer"></footer>
         <hr>
