--- a/History.html
+++ b/History.html
@@ -59,6 +59,9 @@
                 Lionel Messi Era: Lionel Messi, considered one of the greatest footballers of all time, emerged from Barça's youth academy, La Masia. He led the club to unprecedented success, winning multiple Ballon d'Or awards and becoming the club's all-time top scorer.
                 Recent Challenges: Despite their success, FC Barcelona faced financial difficulties in the late 2010s, leading to the departure of Messi in 2021 due to salary cap constraints. The club is undergoing a period of transition.
             </p>
+            <br>
+            <a href="quiz.html">Check your knowledge!</a>
+            <br>
             <div class="music-container" id="music-container">
                 <div class="music-info">
                   <h4 id="title"></h4>
@@ -131,6 +134,30 @@
                 <a href="https://www.google.com/search?sca_esv=579655989&rlz=1C1GCEU_ruKZ1067KZ1067&sxsrf=AM9HkKlzH_I5y8E5ook1faRgPzQa92jP7g:1699216121757&q=%D1%84%D0%BA+%D0%B1%D0%B0%D1%80%D1%81%D0%B5%D0%BB%D0%BE%D0%BD%D0%B0&stick=H4sIAAAAAAAAAONgFuLQz9U3yK4oy1MCszLK0ku0tDzy08szc1KCC_KLSoodi4vzkzMTSzLz84pDUhNzi0PyIRIgziJW8YstF3YpXNh4YcPFhouNF7Ze2H1h34W9FzbsYGUEAGFTP2tfAAAA&sa=X&ved=2ahUKEwiKz9Wq2a2CAxXqEhAIHRWfCksQxA16BAhKEAU&biw=1536&bih=731&dpr=1.25#sie=t;/m/0hvgt;2;/m/09gqx;st;fp;1;;;" class="list-group-item list-group-item-action">Champions League</a>
               </div>
         </section>
+        <br>
+        <section id="quiz" class="container">
+            <h2>Quiz</h2>
+            <div id="categories" class="row">
+                <div class="category col-md-6" id="category1">
+                    <h3>Category 1</h3>
+                    <div class="drag-element" draggable="true">Item A</div>
+                    <div class="drag-element" draggable="true">Item B</div>
+                    <div class="drag-element" draggable="true">Item C</div>
+                </div>
+                <div class="category col-md-6" id="category2">
+                    <h3>Category 2</h3>
+                    <div class="drag-element" draggable="true">Item X</div>
+                    <div class="drag-element" draggable="true">Item Y</div>
+                    <div class="drag-element" draggable="true">Item Z</div>
+                </div>
+            </div>
+            <div id="drop-targets" class="row">
+                <div class="drop-target col-md-4" id="target1">Drop here</div>
+                <div class="drop-target col-md-4" id="target2">Drop here</div>
+                <div class="drop-target col-md-4" id="target3">Drop here</div>
+            </div>
+        </section>
+        <script src="js/game.js"></script>
     </main>
     <footer class="main-footer" >
         <hr>
