--- a/quiz.html
+++ b/quiz.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Drag and Drop Game</h1>
+        <h1>Choose the objects that related to FC Barcelona</h1>
         <div class="row">
             <div class="col-md-6">
                 <h3>Draggable Items</h3>
@@ -36,7 +36,7 @@
                 <div class="draggable" draggable="true" id="item5">Camp Nou</div>
             </div>
             <div class="col-md-6">
-                <h3>Drop Targets</h3>
+                <h3>Drop here</h3>
                 <div class="droptarget" id="target1"></div>
                 <div class="droptarget" id="target2"></div>
                 <div class="droptarget" id="target3"></div>
